stopping canvas to draw outside

--- a/FF_control_wpf/FF_control_wpf/MainWindow.xaml
+++ b/FF_control_wpf/FF_control_wpf/MainWindow.xaml
@@ -8,7 +8,8 @@
                 MouseRightButtonUp="can_MouseRightButtonUp"
                 Background="AliceBlue"
                 Height="300"
-                Width="300"/>
+                Width="300"
+                ClipToBounds="True"/>
                 
     </Grid>
 </Window>
